# A3Engine

./: .gitignore  A3Engine.sln  CMakeLists.txt  CMakeSettings.json  README.md  bash.exe.stackdump  vcpkg.json
A3Engine/: A3Engine.vcxproj  A3Engine.vcxproj.filters  imgui.ini  main.cpp  pch.h
A3Engine/game/: game.cpp  game.h
A3Engine/game/objects/: Player.cpp  Player.h  StalkerAI.cpp  StalkerAI.h  testObject.cpp  testObject.h
A3Engine/game/scenes/: testScene.cpp  testScene.h
A3Engine/res/models/Alien_I/: alien_i.gltf
A3Engine/res/models/map/: simpleMap.gltf
A3Engine/res/models/monkey/: suzanne_02.gltf
A3Engine/res/models/primitives/: box.gltf  plane.gltf
A3Engine/res/models/testScene/: testScene.gltf
A3Engine/src/common/: UniqueID.cpp  UniqueID.h
A3Engine/src/core/: AssetManager.cpp  AssetManager.h  EObject.cpp  EObject.h  Engine.cpp  Engine.h  Profile.cpp  Profile.h  SceneManager.cpp  SceneManager.h
A3Engine/src/core/GOCS/: CharacterBody.cpp  CollisionShape.cpp  Component.cpp  Component.h  ModelRenderer.cpp  NavigationAgent.cpp  PhysicsBody.cpp  RigidBody.cpp  StaticBody.cpp
A3Engine/src/core/input/: Input.cpp  Input.h  keycodes.h
A3Engine/src/core/navigation/: NavigationSystem.cpp  NavigationSystem.h
A3Engine/src/core/navigation/DebugUtils/: DebugDraw.cpp  DetourDebugDraw.cpp  DetourDebugDraw.h  RecastDebugDraw.cpp  RecastDump.cpp
A3Engine/src/core/navigation/DetourCrowd/: DetourCrowd.cpp  DetourCrowd.h  DetourObstacleAvoidance.cpp  DetourPathCorridor.cpp
A3Engine/src/core/navigation/DetourTileCache/: DetourTileCache.cpp  DetourTileCache.h  DetourTileCacheBuilder.cpp  DetourTileCacheBuilder.h
A3Engine/src/core/physics/: JoltLayer.h  Physics.cpp  Physics.h  Raycast.cpp  Raycast.h  TriggerVolume.cpp  TriggerVolume.h
A3Engine/src/editor/: Editor.cpp  Editor.h  EngineEditor.cpp  EngineEditor.h  ImGuiLayer.cpp  ImGuiLayer.h
A3Engine/src/renderer/: GizmoDebugRenderer.cpp  GizmoDebugRenderer.h  LineRenderer.cpp  LineRenderer.h  PhysicsDebugRenderer.cpp  PhysicsDebugRenderer.h  Renderer.cpp  Renderer.h
A3Engine/src/resources/: Collision.cpp  Collision.h  Material.cpp  Material.h  Model.cpp  Model.h  Resource.cpp  Resource.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
A3Engine/src/scene/: Camera.cpp  Camera.h  Components.cpp  Components.h  GameObject.cpp  GameObject.h  GameObject.inl  ObjectPool.h  Scene.cpp  Scene.h  Timer.cpp  Timer.h
A3Engine/src/shaders/: fs.shader  fs_debug.shader  vs.shader  vs_debug.shader
src/editor/: AssetManager.cpp  AssetManager.hpp  Editor.cpp  Editor.hpp  EditorContext.cpp  EditorContext.hpp  EditorPanel.cpp  EditorPanel.hpp  IconsLibrary.cpp  IconsLibrary.hpp  Main.cpp
src/editor/assets/: icons.json
src/editor/panels/: AssetBrowser.cpp  AssetBrowser.hpp  ContentBrowser.cpp  ContentBrowser.hpp
src/engine/: Core.cpp  Core.hpp  Engine.cpp  Engine.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Project.hpp  Renderer.cpp  Renderer.hpp  pch.h
src/engine/assets/: Texture2D.cpp  asset.hpp
src/engine/input/: Input.cpp  Input.hpp  keycodes.h
